labs/08-loadbalancer-ipam-l2/lb-ipam-l2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-loadbalancer
spec:
  controllerName: io.cilium/gateway-controller
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: lb-gateway-config
    namespace: gateway-demo
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway-lb
  namespace: gateway-demo
spec:
  gatewayClassName: cilium-loadbalancer
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-lb
  namespace: gateway-demo
spec:
  parentRefs:
    - name: cilium-gateway-lb
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /get
      backendRefs:
        - name: web
          port: 80
